# communication.qkd_key_rate

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  qkd_key_rate.base.config.html  qkd_key_rate.base.corrector.html  qkd_key_rate.base.detector.html  qkd_key_rate.base.html  qkd_key_rate.base.keyrate.html  qkd_key_rate.base.message.html  qkd_key_rate.base.parity_strategy.html  qkd_key_rate.base.permutations.html  qkd_key_rate.base.receiver.html  qkd_key_rate.base.schedule.html  qkd_key_rate.base.sender.html  qkd_key_rate.html  qkd_key_rate.protocols.classical.cascade.html  qkd_key_rate.protocols.classical.html  qkd_key_rate.protocols.classical.privacy_amplification.html  qkd_key_rate.protocols.classical.winnow.html  qkd_key_rate.protocols.html  qkd_key_rate.protocols.quantum.bb84.html  qkd_key_rate.protocols.quantum.bb84_single_photon.html  qkd_key_rate.protocols.quantum.bbm92.html  qkd_key_rate.protocols.quantum.html  qkd_key_rate.utils.entropy.html  qkd_key_rate.utils.html  qkd_key_rate.utils.required_linktime.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  qkd_key_rate.base.config.doctree  qkd_key_rate.base.corrector.doctree  qkd_key_rate.base.detector.doctree  qkd_key_rate.base.doctree  qkd_key_rate.base.keyrate.doctree  qkd_key_rate.base.message.doctree  qkd_key_rate.base.parity_strategy.doctree  qkd_key_rate.base.permutations.doctree  qkd_key_rate.base.receiver.doctree  qkd_key_rate.base.schedule.doctree  qkd_key_rate.base.sender.doctree  qkd_key_rate.doctree  qkd_key_rate.protocols.classical.cascade.doctree  qkd_key_rate.protocols.classical.doctree  qkd_key_rate.protocols.classical.privacy_amplification.doctree  qkd_key_rate.protocols.classical.winnow.doctree  qkd_key_rate.protocols.doctree  qkd_key_rate.protocols.quantum.bb84.doctree  qkd_key_rate.protocols.quantum.bb84_single_photon.doctree  qkd_key_rate.protocols.quantum.bbm92.doctree  qkd_key_rate.protocols.quantum.doctree  qkd_key_rate.utils.doctree  qkd_key_rate.utils.entropy.doctree  qkd_key_rate.utils.required_linktime.doctree
docs/_modules/: index.html
docs/_modules/qkd_key_rate/base/: corrector.html  detector.html  keyrate.html  message.html  parity_strategy.html  permutations.html  receiver.html  schedule.html  sender.html
docs/_modules/qkd_key_rate/protocols/classical/: cascade.html  privacy_amplification.html  winnow.html
docs/_modules/qkd_key_rate/protocols/quantum/: bb84.html  bb84_single_photon.html  bbm92.html
docs/_modules/qkd_key_rate/utils/: entropy.html  required_linktime.html
docs/_sources/: index.rst.txt  qkd_key_rate.base.config.rst.txt  qkd_key_rate.base.corrector.rst.txt  qkd_key_rate.base.detector.rst.txt  qkd_key_rate.base.keyrate.rst.txt  qkd_key_rate.base.message.rst.txt  qkd_key_rate.base.parity_strategy.rst.txt  qkd_key_rate.base.permutations.rst.txt  qkd_key_rate.base.receiver.rst.txt  qkd_key_rate.base.rst.txt  qkd_key_rate.base.schedule.rst.txt  qkd_key_rate.base.sender.rst.txt  qkd_key_rate.protocols.classical.cascade.rst.txt  qkd_key_rate.protocols.classical.privacy_amplification.rst.txt  qkd_key_rate.protocols.classical.rst.txt  qkd_key_rate.protocols.classical.winnow.rst.txt  qkd_key_rate.protocols.quantum.bb84.rst.txt  qkd_key_rate.protocols.quantum.bb84_single_photon.rst.txt  qkd_key_rate.protocols.quantum.bbm92.rst.txt  qkd_key_rate.protocols.quantum.rst.txt  qkd_key_rate.protocols.rst.txt  qkd_key_rate.rst.txt  qkd_key_rate.utils.entropy.rst.txt  qkd_key_rate.utils.required_linktime.rst.txt  qkd_key_rate.utils.rst.txt
docs/_static/: custom.css
src/tno/quantum/communication/qkd_key_rate/: __init__.py
src/tno/quantum/communication/qkd_key_rate/_utils/: __init__.py  entropy.py
src/tno/quantum/communication/qkd_key_rate/classical/: __init__.py  _corrector.py  _message.py  _parity_strategy.py  _permutations.py  _receiver.py  _required_linktime.py  _schedule.py  _sender.py  cascade.py  privacy_amplification.py  winnow.py
src/tno/quantum/communication/qkd_key_rate/quantum/: __init__.py  _config.py  _detector.py  _keyrate.py  bb84.py  bb84_single_photon.py  bbm92.py
tno/quantum/communication/qkd_key_rate/: __init__.py
tno/quantum/communication/qkd_key_rate/base/: __init__.py  config.py  corrector.py  detector.py  keyrate.py  message.py  parity_strategy.py  permutations.py  receiver.py  schedule.py  sender.py
tno/quantum/communication/qkd_key_rate/protocols/classical/: __init__.py  cascade.py  privacy_amplification.py  winnow.py
tno/quantum/communication/qkd_key_rate/protocols/quantum/: __init__.py  bb84.py  bb84_single_photon.py  bbm92.py
tno/quantum/communication/qkd_key_rate/test/: __init__.py  conftest.py
tno/quantum/communication/qkd_key_rate/test/base/: test_corrector.py  test_detector.py  test_message.py  test_schedule.py  (+2 more)
tno/quantum/communication/qkd_key_rate/utils/: __init__.py  entropy.py  required_linktime.py
(+23 files in other folders)
