[metadata]
name = tno.quantum.communication.qkd_key_rate
author = TNO Quantum
author_email = tnoquantum@tno.nl
maintainer = TNO Quantum
maintainer_email = tnoquantum@tno.nl
description = Quantum communication key-rate modules
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.8
keywords =
    TNO
    Quantum
    Quantum Key Distribution
url = https://tno.nl
download_url = https://pypi.org/project/tno.quantum.communication.qkd_key_rate/#files
project_urls =
    Documentation = https://tno-quantum.github.io/communication.qkd_key_rate/
    Source Code = https://github.com/TNO-Quantum/communication.qkd_key_rate
version = attr: tno.quantum.communication.qkd_key_rate.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.quantum.communication.qkd_key_rate
    tno.quantum.communication.qkd_key_rate.base
    tno.quantum.communication.qkd_key_rate.protocols
    tno.quantum.communication.qkd_key_rate.protocols.quantum
    tno.quantum.communication.qkd_key_rate.protocols.classical
    tno.quantum.communication.qkd_key_rate.utils
    tno.quantum.communication.qkd_key_rate.test
    tno.quantum.communication.qkd_key_rate.test.base
    tno.quantum.communication.qkd_key_rate.test.classical
    tno.quantum.communication.qkd_key_rate.test.quantum
    tno.quantum.communication.qkd_key_rate.test.utils
zip_safe = False
install_requires =
    numpy>=1.21.6
    scipy>=1.2.1
    pandas>=1.3.5
    matplotlib>=3.0.3
namespace_packages =
    tno
    tno.quantum
    tno.quantum.communication
include_package_data = True

[options.package_data]
tno.quantum.communication.qkd_key_rate = py.typed

[options.extras_require]
tests =
    pytest~=7.2.0
    pytest-cov~=4.0.0
dev =
    black~=22.10.0
    isort~=5.10.1
    mypy~=0.982
    pylint~=2.15.5
    sphinx~=5.3.0
    sphinx-autodoc-typehints~=1.19.5
    sphinx-math-dollar~=1.2.1
    sphinx-rtd-theme~=1.0

